@@ -73,6 +73,8 @@ guint an_message_manager_get_type();
 gboolean an_message_manager_add_type(AnMessageManager* amm, const gint type_name, const gchar* pixmap);
 gboolean an_message_manager_append(AnMessageManager* amm, const gchar* msg_string, gint type_name);
 
+gboolean an_message_manager_show_pane (AnMessageManager* amm, gint type_name);
+
 void an_message_manager_clear(AnMessageManager* amm, gint type_name);
 void an_message_manager_show(AnMessageManager* amm, gint type_name);
 
